# MaskedSpGEMM

./: .gitmodules  BIN.h  CMakeLists.txt  CSC.h  CSR.h  HeapEntry.h  IO.h  Makefile  README.md  SPA.h  SplitTuples.h  grb_util.h  hash_mult.h  hash_mult_hw.h  heap_mult.h  heap_mult_generic.h  inner_mult.h  mask_hash.h  mask_hash_mult.h  mask_hash_wobin_mult.h  multiply.h  notes  outer_mult.h  outer_mult2.h  outer_profile.h  outer_profile2.h  output.txt  output_orkut.txt  output_small.txt  spa_mult.h  tri_count.cpp  utility.h
GTgraph/: Makefile.var
GTgraph/sprng2.0-lite/src/: primes_64.c
Matlab/: ccoeff_ll.m  splittoproc.m
PaRMAT/Release/: out.txt
PaRMAT/src/: Edge.hpp  GraphGen_notSorted.cpp  GraphGen_notSorted.hpp
benchmarks/: BCAllGrb.cpp  ComplementMaskedSpGEMM.cpp  HeatMap.cpp  KTrussAllGrb.cpp  MaskedAllSpGEMM.cpp  TriCntAll.cpp  TriCntAllGrb.cpp  benchmarks-util.h
results/perf-prof/: LinePlot.py  PerfProf.py  all-phase-cori-KNL  all-phase-cori-haswell  all-phase-except-heap-cori-KNL  all-phase-except-heap-cori-haswell  one-phase-cori-KNL  one-phase-cori-haswell  two-phase-cori-KNL  two-phase-cori-haswell
results/perf-prof/data/: bc-backward-512-knl26-haswell.txt  bc-forward-512-knl26-haswell.txt  bc-rmat-haswell-512.txt  bc-rmat-knl-512.txt  bc-rmat-teps.gpi  bc-total-512-knl26-haswell.txt  generate-perf-prof.sh  ktruss-5-knl26-haswell.txt  ktruss-5-knl26-knl.txt  ktruss-5-rmat-haswell-flops.txt  ktruss-5-rmat-haswell-teps.txt  ktruss-5-rmat-knl-flops.txt  ktruss-5-rmat-knl-teps.txt  ktruss-knl26-1p2p-perf-prof.gpi  ktruss-knl26-summary-perf-prof.gpi  ktruss-rmat-flops.gpi  tricnt-knl26-haswell.txt  tricnt-knl26-knl.txt  tricnt-rmat-flops.gpi  tricnt-rmat-haswell-flops.txt  tricnt-rmat-haswell-scaling-flops.txt  tricnt-rmat-haswell-scaling-teps.txt  tricnt-rmat-haswell-teps.txt  tricnt-rmat-knl-flops.txt  tricnt-rmat-knl-scaling-flops.txt  tricnt-rmat-knl-scaling-teps.txt  tricnt-rmat-knl-teps.txt  tricnt-rmat-scaling-flops.gpi
sample/: ._HashSpGEMM.cpp  ._HeapSpGEMM.cpp  ._InnerSpGeMM.cpp  ._OuterSpGEMM.cpp  ComplementMaskedSpGEMM.cpp  GenMatrices.cpp  HashSpGEMM.cpp  HeapSpGEMM.cpp  HeatMap.cpp  InnerSpGEMM.cpp  InnerSpGeMM.cpp  MaskedAllSpGEMM.cpp  MaskedHashSpGEMM.cpp  MaskedSPASpGEMM.cpp  NUMA-aware.cpp  OuterSpGEMM.cpp  OuterSpGEMM2.cpp  ProfileOuterSpGEMM.cpp  ProfileOuterSpGEMM2.cpp  StreamBench.cpp  TriCntAll.cpp  all_parallel_tc.cpp  blocked_parallel_tc.cpp  sample_common.hpp
scripts/: ._run_real.sh  ._run_real_cori.sh  ._run_real_cori1.sh  download.sh  draft.sh  gen_er.sh  gen_rmat.sh  main.sh  run-bc.slurm  run-tricnt.slurm  run.sh  run_STREAM.sh  run_real.sh  run_real_cori.sh  run_real_cori1.sh  run_synthetic.sh  urls.txt
spgemm-blocks/: common.h  masked-spgemm-inner.h  masked-spgemm-poly.h  masked-spgemm-prof.h  masked-spgemm.h  scan.h  util.h
spgemm-blocks/hash/: HashAccumulator.h  MaskedHash.h  MaskedHashAlgorithm.h  masked-hash.h
spgemm-blocks/heap/: Heap.h  MaskedHeap.h  MaskedHeapAlgorithm.h  MaskedHeapAlgorithmInspect.h
spgemm-blocks/inner/: InnerAlgorithm.h  MaskedInnerSpGEMM.h  masked-spgemm-inner.h
spgemm-blocks/mask-indexed/: MaskIndexed.h  MaskIndexedAccumulator.h
spgemm-blocks/mca/: MCA.h  MCAAlgorithm.h  MaskCompressedAccumulator.h
spgemm-blocks/msa/: MSAAlgorithm.h  MSAAlgorithmBase.h  MSAAlgorithm_old.h  MaskedSparseAccumulator1A.h  MaskedSparseAccumulator2A.h
spgemm-blocks/spa/: MaskedSPA.h  SparseAccumulator.h  SparseAccumulator2A.h
test/: CMakeLists.txt  hash-accumulator-test.cpp  input-helpers.h  memalign-test.cpp  same-in-out-test.cpp  scan-test.cpp  sparse-accumulator-test.cpp  split-mem-test.cpp  triple-util-test.cpp
tmp/: A01.mtx
util/: triple-util.h
vergesort/: readme.md
